[package]
name = "mapex"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
strfmt = { git = "https://github.com/vitiral/strfmt.git", branch = "master" }
